--- a/src/component/Pages/Account/User.module.scss
+++ b/src/component/Pages/Account/User.module.scss
@@ -24,6 +24,11 @@ body {
   overflow-x: hidden;
 }
 
+.wrapper {
+  width: 100%;
+  margin: 0px auto;
+}
+
 .header {
   @extend .dflex;
   justify-content: space-between;
@@ -59,9 +64,109 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    line-height: 50px; 
-    text-align: center; 
+    line-height: 50px;
+    text-align: center;
     background: $light_grey;
     color: $dark_green;
   }
+}
+
+.team {
+  width: 90%;
+  margin: auto;
+}
+
+.team_wrapper {
+  margin-top: 20px;
+}
+
+.team_card {
+  height: 450px;
+}
+
+.team_pic {
+  background-color: #14da8f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 56px;
+}
+
+.team_pic img {
+  height: 44px;
+  width: 44px;
+  border-radius: 100%;
+}
+
+.team_items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 4px;
+  background-color: #dadada;
+}
+
+ .team_card > div {
+  margin: 0 10px;
+}
+/*
+.slick-slide {
+  margin: 0 27px;
+}
+
+.slick-list {
+  margin: 0 -27px;
+} */
+/* .slick-slide {
+  margin: 0 10px;
+} */
+
+.survey {
+  width: 90%;
+  margin: auto;
+}
+
+.survey_items {
+  display: grid;
+  column-gap: 30px;
+  row-gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-auto-rows: 1fr; */
+}
+
+.survey_item {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template: auto 1fr minmax(40px, auto) / 1fr;
+}
+.survey_image {
+  position: relative;
+  padding: 0px 0px 90% 0px;
+  margin: 0px 0px 20px 0px;
+}
+.survey_image img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+
+.survey_name {
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0px 0px 10px 0px;
+}
+
+.user_button {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-decoration: none;
+  padding: 0px 20px;
+  line-height: 40px;
+  background-color: #14da8f;
+  justify-self: start;
 }
