--- a/src/component/Pages/Home.module.scss
+++ b/src/component/Pages/Home.module.scss
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}  
+}
+
+
 
 $light_green: #effffa; 
 $dark_green: #14da8f;
@@ -110,11 +112,12 @@ header {
   justify-content: space-between;
   align-items: center;
   background-color: $light_green;
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  /* clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); */
   border-radius: 16px;
-  padding: 3%;
+  padding: 2em;
+  gap: 20px;
   .left_content_wrapper {
-    width: 40%;
+    width: 60%;
     h2 {
       font-size: 3.3vw;
       font-weight: 600;
@@ -133,29 +136,31 @@ header {
       margin: 20px 0px 30px 0px;
     }
     .btn_group {
-      @extend .dflex;
-      width: 70%;
-      justify-content: space-between;
-      gap: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1em;
+
       .btn {
         @extend .dflex;
-        /* width: 48%; */
-        height: 56px;
+        padding: .5em 1em;
+
         font-size: 20px;
-        border-radius: 8px;
         font-weight: 600;
-        padding: 5px;
+
+        border-radius: .5em;
+
         &.btn_primary {
-          background-color: $black;
+          background-color: $dark_green;
           color: $white;
           svg {
             margin-left: 8px;
           }
         }
+
         &.btn_secondary {
           background-color: $white;
           color: $black;
-          border: 1px solid $black;
+          outline: 2px solid $dark_green;
           text-align: center;
         }
       }
@@ -191,12 +196,14 @@ header {
     }
   }
   .right_content_wrapper {
-    width: 48%;
+    width: 40%;
     @extend .dflex;
     justify-content: flex-end;
     img{
         display: block;
         width: 100%;
+        mix-blend-mode: darken;
+        object-fit: contain;
     }
   }
 }
