--- a/src/component/Pages/Home.module.scss
+++ b/src/component/Pages/Home.module.scss
@@ -1,3 +1,11 @@
+/* @import "./../../index.scss"; */
+
+$light_green: #effffa;
+$dark_green: #14da8f;
+$black: #000000;
+$white: #fff;
+
+
 * {
   margin: 0;
   padding: 0;
@@ -5,11 +13,6 @@
 }
 
 
-
-$light_green: #effffa; 
-$dark_green: #14da8f;
-$black: #000000;
-$white: #fff;
 .dflex {
   display: flex;
   justify-content: center;
@@ -20,7 +23,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $white;
+  /* background-color: $white; */
   overflow-x: hidden;
 }
 header {
@@ -38,8 +41,7 @@ header {
   .menu_container {
     @extend .dflex;
     justify-content: flex-end;
-    width: 600px;
-    height: 56px;
+
     span {
       display: inline-flex;
       align-items: center;
@@ -104,6 +106,26 @@ header {
   }
 }
 
+.menu_user {
+  position: relative;
+  padding: .5em 0 .5em 3em;
+
+  &::before {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+    height: 100%;
+    aspect-ratio: 1;
+
+    background-image: url("./../../../public/images/user_icon.svg");
+    background-size: contain;
+  }
+}
+
 /* content_wrapper */
 .content_wrapper {
   width: 80%;
@@ -142,12 +164,12 @@ header {
 
       .btn {
         @extend .dflex;
-        padding: .5em 1em;
+        padding: 0.5em 1em;
 
         font-size: 20px;
         font-weight: 600;
 
-        border-radius: .5em;
+        border-radius: 0.5em;
 
         &.btn_primary {
           background-color: $dark_green;
@@ -166,7 +188,7 @@ header {
       }
     }
     .review_container {
-      margin-top: 50px;
+      margin-top: 2.5em;
       p.total_review {
         display: flex;
         flex-direction: column;
@@ -189,8 +211,8 @@ header {
         background-color: $dark_green;
         border-radius: 8px;
         margin-top: 10px;
-        +span{
-            margin-left: 8px;
+        + span {
+          margin-left: 8px;
         }
       }
     }
@@ -199,116 +221,123 @@ header {
     width: 40%;
     @extend .dflex;
     justify-content: flex-end;
-    img{
-        display: block;
-        width: 100%;
-        mix-blend-mode: darken;
-        object-fit: contain;
+    img {
+      width: 100%;
+      mix-blend-mode: darken;
+      object-fit: contain;
+      object-position: center;
     }
   }
 }
- 
+
 /* service_container */
-.service_container{
-    display: block;
-    width: 80%;
-    margin: 80px auto 0 auto;
-    .title_wrapper{
-        /* overflow: hidden; */
-        .service_title{
-            display: block;
-            text-align: center;
-            color: $dark_green;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            font-size: 1.01vw;
-            font-weight: 600;
-            overflow: hidden;
-        }
+.service_container {
+  display: block;
+  width: 80%;
+  margin: 80px auto 0 auto;
+  .title_wrapper {
+    /* overflow: hidden; */
+    .service_title {
+      display: block;
+      text-align: center;
+      color: $dark_green;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      font-size: 2vw;
+      font-weight: 600;
+      overflow: hidden;
     }
-    h2{
-        font-size: 2.2vw;
-        font-weight: 600;
-        color: $black;
-        text-align: center;
-        text-transform: capitalize;
-        margin-top: 20px;
-        line-height: 1.5;
-        overflow: hidden;
-    }
+  }
+  h2 {
+    font-size: 1.8vw;
+    font-weight: 400;
+    color: $black;
+    text-align: center;
+    // text-transform: capitalize;
+    margin-top: 20px;
+    line-height: 1.5;
+    overflow: hidden;
+    
+  }
 }
 
-.service_card{
-    @extend .dflex;
-    flex-wrap: wrap;
-    grid-gap: 1vw;
-    justify-content: flex-start;
-    margin: 60px 0;
-    .card{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: calc(96% / 4);
-        border: 1px solid #f0f0f0;
-        border-radius: 8px;
-        background-color: $white;
-        padding: 2.8vw 3.4vw;
-        height: 16.67vw;
-        position: relative;
-        top: 0;
-        transition: all .3s ease-in-out;
-        &:hover{
-            box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-            cursor: pointer;
-            top: -5px;
-        }
-        &.dark{
-            background-color: $black;
-            color: $white;
-            .line{
-                position: absolute;
-                top: 0;
-                right: 3.8vw;
-                width: 4.5vw;
-            }
-            h2{
-                color: $white;
-                text-align: left;
-            }
-            a{
-                display: flex;
-                justify-content: space-between;
-            }
-        }
-        .service_icon{
-            width: 3.02vw;
-            height: 3.02vw;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            background-color: $dark_green;
-            color: $white;
-            border-radius: 8px;
-        }
-        h3{
-            font-size: 1.15vw;
-            font-weight: 600;
-            color: $black;
-            text-transform: capitalize;
-        }
-        a{
-            display: inline-flex;
-            justify-content: flex-start;
-            font-size: .94vw;
-            color: $dark_green;
-            text-decoration: none;
-            align-items: center;
-            span{
-                margin-right: 8px;
-            }
-            svg{
-                margin-top: 3px;
-            }
-        }
+.service_card {
+  @extend .dflex;
+  flex-wrap: wrap;
+  grid-gap: 1vw;
+  justify-content: flex-start;
+  margin: 60px 0;
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(96% / 4);
+    border: 1px solid #f0f0f0;
+    border-radius: 8px;
+    background-color: $white;
+    padding: 2.8vw 3.4vw;
+    height: 16.67vw;
+    position: relative;
+    top: 0;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+      cursor: pointer;
+      top: -5px;
     }
+    &.dark {
+      background-color: $black;
+      color: $white;
+      .line {
+        position: absolute;
+        top: 0;
+        right: 3.8vw;
+        width: 4.5vw;
+      }
+      h2 {
+        color: $white;
+        text-align: left;
+      }
+      a {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+    .service_icon {
+      width: 3.02vw;
+      height: 3.02vw;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $dark_green;
+      color: $white;
+      border-radius: 8px;
+    }
+    h3 {
+      font-size: 1.15vw;
+      font-weight: 600;
+      color: $black;
+      letter-spacing: 0.5px;
+    }
+    h4 {
+      font-size: 1vw;
+      font-weight: 400;
+      color: $black;
+      letter-spacing: 0.5px;
+    }
+    a {
+      display: inline-flex;
+      justify-content: flex-start;
+      font-size: 0.94vw;
+      color: $dark_green;
+      text-decoration: none;
+      align-items: center;
+      span {
+        margin-right: 8px;
+      }
+      svg {
+        margin-top: 3px;
+      }
+    }
+  }
 }
