--- a/src/component/Pages/SignInSignUp/SignInSignUp.module.scss
+++ b/src/component/Pages/SignInSignUp/SignInSignUp.module.scss
@@ -25,6 +25,7 @@ body {
   /* background-color: $light_green; */
 }
 
+
 .wrapper {
   @extend .dflex;
   min-height: 100vh;
@@ -76,7 +77,7 @@ body {
         .inputField {
           width: 100%;
           height: 50px;
-          background: $light_grey;
+          // background: $light_grey;
           margin: 10px 0;
           border: 2px solid $dark_green;
           border-radius: 50px;
@@ -190,11 +191,13 @@ body {
 .leftPanel .content,
 .leftPanel .image {
   transform: translateX(-200%);
+  
 }
 
 .rightPanel .content,
 .rightPanel .image {
   transform: translateX(0);
+  
 }
 /* Animation */
 
