--- a/src/component/Pages/Account/NewTeam.module.scss
+++ b/src/component/Pages/Account/NewTeam.module.scss
@@ -6,17 +6,14 @@
 
 $light_green: #effffa;
 $dark_green: #14da8f;
+$light_grey: #dadada;
+$dark_grey: #3e3e3e;
 $black: #000000;
 $white: #fff;
-$light_grey: #dadada;
 
 a {
   text-decoration: none;
   color: #000000;
-}
-
-button {
-  border: none;
 }
 
 .dflex {
@@ -33,27 +30,53 @@ body {
   overflow-x: hidden;
 }
 
+input,
+textarea,
+button {
+  background: none;
+  border: none;
+  outline: none;
+}
+
 .wrapper {
   width: 100%;
   margin: 0px auto;
 }
-.team_description {
+
+.form {
+  display: flex;
+  align-items: start;
   width: 90%;
-  margin: 0px auto;
+  margin: 0 auto;
 }
 
-.team_item {
-  display: flex;
-}
-
-.team_text {
-  display: flex;
+.right_input {
+  @extend .dflex;
   flex-direction: column;
   margin-left: 30px;
-  gap: 30px;
+  align-items: start;
 }
 
-.team_title {
-  @extend .dflex;
+.text_input {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.team_name {
+  border: 2px solid $dark_green;
+  border-radius: 5px;
+  height: 40px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.team_description {
+  font-family: inherit;
+  resize: vertical;
+  border: 2px solid $dark_green;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
