--- a/src/component/Pages/Account/OneTeam.module.scss
+++ b/src/component/Pages/Account/OneTeam.module.scss
@@ -115,3 +115,9 @@ h2 {
   line-height: 30px;
   margin: 0px 0px 10px 0px;
 }
+
+.choice_role{
+  position: absolute;
+  margin: 5px;
+  /* background-color: #dadada; */
+}
