--- a/src/component/Pages/Account/dropdown/DropDown.module.scss
+++ b/src/component/Pages/Account/dropdown/DropDown.module.scss
@@ -29,6 +29,8 @@
   /* box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06); */
 }
 
+Как же хочется тебя поцеловать
+                  и не только
 
 .dropdown_content,
 .dropdown_item {
