--- a/src/component/Pages/Account/component/Uploader.module.scss
+++ b/src/component/Pages/Account/component/Uploader.module.scss
@@ -35,7 +35,9 @@ color: #14da8f;
 }
 
 .uploaded_content{
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
