--- a/src/component/Pages/Account/UserHeader.module.scss
+++ b/src/component/Pages/Account/UserHeader.module.scss
@@ -71,7 +71,7 @@ body {
     border-radius: 50%;
     line-height: 50px;
     text-align: center;
-    background: $light_grey;
-    color: $dark_green;
+    background: $dark_green;
+    color: rgb(255, 255, 255);
   }
 }
