--- a/src/component/Pages/Account/OneTeam.module.scss
+++ b/src/component/Pages/Account/OneTeam.module.scss
@@ -37,7 +37,7 @@ h2 {
   font-size: 1.8vw;
   font-weight: 400;
   color: $black;
-  margin-top: 50px;
+  // margin-top: 50px;
   margin-bottom: 20px;
   line-height: 1.5;
   overflow: hidden;
@@ -54,10 +54,22 @@ h2 {
 
 .team_item {
   display: flex;
+  margin-bottom: 50px;
 }
 
+.team_image {
+  display: flex;
+  flex-direction: column;
+}
+.edit_img {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  margin-top: 10px;
+}
 .team_image img {
-  width: 100%;
+  width: 300px;
   height: 100%;
   object-fit: cover;
   object-position: bottom;
@@ -71,7 +83,8 @@ h2 {
 }
 
 .team_title {
-  @extend .dflex;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -83,7 +96,7 @@ h2 {
 .survey_items {
   display: grid;
   column-gap: 30px;
-  row-gap: 50px;
+  row-gap: 5px;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   /* grid-auto-rows: 1fr; */
 }
@@ -116,15 +129,36 @@ h2 {
 .choice_role {
   position: absolute;
   margin: 5px;
+
   /* background-color: #dadada; */
+}
+
+.bc {
+  background-color: #dadada;
+  border-radius: 0.1em;
+  padding: 2px;
+  transition: all 0.3s ease-in-out;
+  font-size: 20px;
+  margin: 9px;
+}
+
+.bc:hover {
+  background-color: $light_green;
+}
+
+.choice_team {
+  position: absolute;
+  margin: 50px;
+  // margin-left: 90px;
+  // background-color: red;
 }
 
 .row {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 90%;
   margin: 0 auto;
-  justify-content: space-between;
 }
 
 .delete {
@@ -133,4 +167,39 @@ h2 {
 
 .delete:hover {
   color: #1e1e1e;
+}
+
+.survey_email,
+.survey_review {
+  width: 90%;
+  margin: 0 auto;
+  color: #919191;
+}
+
+.team_name_title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.survey_title_go {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.survey_go {
+  padding: 2px;
+  transition: all 0.3s ease-in-out;
+  font-size: 20px;
+  margin: 9px;
+  border-radius: 0.1em;
+}
+
+.survey_go:hover {
+  background-color: #c6c6c6;
 }
