--- a/src/component/Pages/Account/User.module.scss
+++ b/src/component/Pages/Account/User.module.scss
@@ -35,11 +35,12 @@ body {
 
 h2 {
   font-size: 1.8vw;
-  font-weight: 400;
+  font-weight: 600;
   color: $black;
   margin-top: 20px;
   line-height: 1.5;
   overflow: hidden;
+  letter-spacing: 5px;
 }
 
 .wrapper {
@@ -105,7 +106,7 @@ h2 {
   color: #14da8f;
 }
 
-.survey_header{
+.survey_header {
   margin-top: 60px;
   margin-bottom: 30px;
 }
@@ -157,4 +158,39 @@ h2 {
   color: $black;
   outline: 2px solid $dark_green;
   text-align: center;
+}
+
+.survey_email,
+.survey_review {
+  width: 90%;
+  margin: 0 auto;
+  color: #919191;
+}
+
+.team_name_title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.survey_title_go {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.survey_go {
+  padding: 2px;
+  transition: all 0.3s ease-in-out;
+  font-size: 20px;
+  margin: 9px;
+  border-radius: 0.1em;
+}
+
+.survey_go:hover {
+  background-color: #c6c6c6;
 }
