--- a/src/component/Pages/Home.module.scss
+++ b/src/component/Pages/Home.module.scss
@@ -154,7 +154,7 @@ header {
     }
     p {
       font-size: 1.02vw;
-      color: #333;
+      /* color: #333; */
       margin: 20px 0px 30px 0px;
     }
     .btn_group {
@@ -181,7 +181,7 @@ header {
 
         &.btn_secondary {
           background-color: $white;
-          color: $black;
+          /* color: $black; */
           outline: 2px solid $dark_green;
           text-align: center;
         }
@@ -194,13 +194,13 @@ header {
         flex-direction: column;
         font-weight: 600;
         font-size: 20px;
-        color: $black;
+        /* color: $black; */
         margin: 0;
       }
       p.more_review {
         font-weight: 400;
         font-size: 16px;
-        color: #333;
+        /* color: #333; */
         margin: 20px 0 0;
       }
       span {
@@ -251,7 +251,7 @@ header {
   h2 {
     font-size: 1.8vw;
     font-weight: 400;
-    color: $black;
+    /* color: $black; */
     text-align: center;
     // text-transform: capitalize;
     margin-top: 20px;
@@ -286,7 +286,7 @@ header {
       top: -5px;
     }
     &.dark {
-      background-color: $black;
+      /* background-color: $black; */
       color: $white;
       .line {
         position: absolute;
@@ -316,13 +316,13 @@ header {
     h3 {
       font-size: 1.15vw;
       font-weight: 600;
-      color: $black;
+      /* color: $black; */
       letter-spacing: 0.5px;
     }
     h4 {
       font-size: 1vw;
       font-weight: 400;
-      color: $black;
+      /* color: $black; */
       letter-spacing: 0.5px;
     }
     a {
