--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,10 @@ $white: #fff;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background-color: aqua;
+  font-family: "Poppins", sans-serif;
+  color: #4d4d4d;
+}
+
+img {
+  border-radius: 0.5em;
 }
