--- a/src/component/Pages/Account/Button.module.scss
+++ b/src/component/Pages/Account/Button.module.scss
@@ -12,7 +12,7 @@ $light_grey: #dadada;
 
 a {
   text-decoration: none;
-  color: #000000;
+  color: #4d4d4d;
 }
 
 button {
@@ -25,7 +25,7 @@ button {
   font-weight: 400;
   border-radius: 0.5em;
   background-color: $white;
-  color: $black;
+  /* color: $black; */
   outline: 2px solid $dark_green;
   text-align: center;
 
