--- a/src/component/Pages/Account/NewTeam.module.scss
+++ b/src/component/Pages/Account/NewTeam.module.scss
@@ -13,7 +13,7 @@ $white: #fff;
 
 a {
   text-decoration: none;
-  color: #000000;
+  /* color: #000000; */
 }
 
 .dflex {
@@ -21,13 +21,23 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-}
+} 
 body {
   display: block;
   width: 100%;
   height: 100%;
   background-color: $white;
   overflow-x: hidden;
+}
+
+.title{
+  width: 90%;
+  margin: 30px auto;
+}
+
+.title_gray{
+  color: #919191;
+  font-size: 24px;
 }
 
 input,
@@ -45,15 +55,19 @@ button {
 
 .form {
   display: flex;
-  align-items: start;
+  /* align-items: start; */
   width: 90%;
   margin: 0 auto;
 }
 
+
+.left{
+  margin: 0 auto;
+}
 .right_input {
+  width: 50%;
   @extend .dflex;
   flex-direction: column;
-  margin-left: 30px;
   align-items: start;
 }
 
@@ -80,3 +94,4 @@ button {
   padding: 10px;
   margin-bottom: 20px;
 }
+
