--- a/src/component/Pages/Account/OneTeam.module.scss
+++ b/src/component/Pages/Account/OneTeam.module.scss
@@ -12,7 +12,7 @@ $light_grey: #dadada;
 
 a {
   text-decoration: none;
-  color: #000000;
+  /* color: #000000; */
 }
 
 button {
@@ -36,7 +36,7 @@ body {
 h2 {
   font-size: 1.8vw;
   font-weight: 400;
-  color: $black;
+  /* color: $black; */
   // margin-top: 50px;
   margin-bottom: 20px;
   line-height: 1.5;
