--- a/src/component/Pages/Account/UserHeader.module.scss
+++ b/src/component/Pages/Account/UserHeader.module.scss
@@ -12,7 +12,7 @@ $light_grey: #dadada;
 
 a {
   text-decoration: none;
-  color: #000000;
+  /* color: #000000; */
 }
 
 button {
@@ -42,6 +42,7 @@ body {
   .logo_wrapper {
     font-size: 32px;
     font-weight: 600;
+    color: #4d4d4d;
     span {
       color: $dark_green;
     }
@@ -73,5 +74,20 @@ body {
     text-align: center;
     background: $dark_green;
     color: rgb(255, 255, 255);
+  }
+
+  .userPanel:hover {
+    background-color: #12c781;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .links {
+    color: #4d4d4d;
+    /* letter-spacing: 2px; */
+  }
+
+  .links:hover {
+    color: $dark_green;
+    transition: all 0.1s ease-in-out;
   }
 }
