--- a/src/component/Pages/Account/add/AddPartisipiant.module.scss
+++ b/src/component/Pages/Account/add/AddPartisipiant.module.scss
@@ -8,7 +8,7 @@ $light_grey: #dadada;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    /* height: 70vh; */
 
     > form {
         display: grid;
@@ -23,9 +23,10 @@ $light_grey: #dadada;
         }
 
         button[type=submit] {
+            font-family: "Rubik", sans-serif;
             border-radius: 0.5em;
             background-color: $white;
-            color: $black;
+            /* color: $black; */
             outline: 2px solid $dark_green;
             text-align: center;
 
