--- a/src/component/Pages/SurveyConstructor/Result/SurveyResult.module.scss
+++ b/src/component/Pages/SurveyConstructor/Result/SurveyResult.module.scss
@@ -48,3 +48,21 @@ button {
   display: flex;
   align-items: center;
 }
+
+.answer__container {
+  margin-bottom: 30px;
+}
+
+.answer__text {
+  min-width: 300px;
+
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.answer__text > ul > li {
+  background-color: rgb(248,249,250);
+  padding: 7px;
+  margin: 10px 0 10px 0;
+  border-radius: 6px;
+}
